add png 程序重定位

--- a/src/链接器.md
+++ b/src/链接器.md
@@ -108,7 +108,7 @@ LFE13:
 
 链接器：是一个系统程序，其将独立的二进制机器语言程序，一般指目标文件，组装起来，处理其中未定义的标签，以形成可执行文件。
 
-![程序重定位](../pic/程序重定位.dio)
+![程序重定位](../pic/程序重定位.dio.png)
 
 
 ## 总结
