--- a/src/链接器.md
+++ b/src/链接器.md
@@ -1,5 +1,5 @@
 
-# 编译原理 (预处理,编译,汇编,链接)
+# 预处理，编译，汇编，链接，加载
 >计算机组成与设计，软硬件接口
 >[gcc/g++等编译器 编译原理： 预处理，编译，汇编，链接各步骤详解](https://blog.csdn.net/elfprincexu/article/details/45043971)
 >[编译原理 (预处理,编译,汇编,链接)](https://blog.csdn.net/derkampf/article/details/71597684)
@@ -98,7 +98,6 @@ LFE13:
 
 ## 链接
 
-
 链接器将多个单独编译的文件融合在一起，以形成可执行文件。它执行三个任务：
 
 - 查询程序库，确保程序不包含未定义的标签。
@@ -107,6 +106,8 @@ LFE13:
 
 
 链接器：是一个系统程序，其将独立的二进制机器语言程序，一般指目标文件，组装起来，处理其中未定义的标签，以形成可执行文件。
+
+## 加载
 
 ![程序重定位](../pic/程序重定位.dio.png)
 
