--- a/src/加载.md
+++ b/src/加载.md
@@ -30,7 +30,7 @@ C和C++编译器是集成的，编译一般分为四个步骤：
 
 ## 预处理
 
-预处理是C语言程序从源代码变成可执行程序的第一步，主要是C语言编译器对各种预处理命令进行处理，包括头文件的包含、宏定义的扩展、条件编译的选择等。
+预处理是C语言程序从源代码变成可执行程序的第一步，主要是C语言编译器对各种预处理命令进行处理，包括头文件的展开、宏替换、条件编译的选择等。
 
     gcc -E test.c -o test.i
 
