--- a/src/内存管理.md
+++ b/src/内存管理.md
@@ -1,4 +1,17 @@
 # 内存管理
 
-## 虚拟存储器
-## 
+虚拟内存
+
+
+
+分页系统地址映射
+页面置换算法
+1. 最佳置换算法（OPT）
+2. 先进先出置换算法（FIFO）
+3. 最近最久未使用置换算法（LRU）
+4. 时钟置换算法（clock）
+5. 最少使用置换算法（LFU）
+分段
+段页式
+分页与分段的比较
+
