--- a/src/内存管理.md
+++ b/src/内存管理.md
@@ -32,11 +32,40 @@
 不过，这只是一种理想情况，在实际中无法实现，因为操作系统无法知道每一个页面要等待多长时间以后才会被再次访问。
 可用作其它算法的性能评价的依据(在一个模拟器上运行某个程序，并记录每一次的页面访问情况，在第二遍运行时即可使用最优算法)。 
 
-
+![最佳置换算法（OPT）](../pic/最优页面置换算法.dio.png)
 
 2. 先进先出置换算法（FIFO）
+选择换出的页面是最先进入的页面。
+
+该算法会将那些经常被访问的页面换出，导致缺页率升高。
+
+![先进先出置换算法（FIFO）](../pic/先进先出置换算法.dio.png)
+
+
 3. 最近最久未使用置换算法（LRU）
-3. 时钟置换算法（clock）
-4. 最少使用置换算法（LFU）
+
+虽然无法知道将来要使用的页面情况，但是可以知道过去使用页面的情况。LRU 将最近最久未使用的页面换出。
+
+为了实现 LRU，需要在内存中维护一个所有页面的链表。当一个页面被访问时，将这个页面移到链表表头。这样就能保证链表表尾的页面是最近最久未访问的。
+
+因为每次访问都需要更新链表，因此这种方式实现的 LRU 代价很高。
+
+![最近最久未使用置换算法（LRU）](../pic/最近最久未使用置换算法.dio.png)
+
+
+4. 时钟置换算法（clock）
+   
+LRU 算法是较好的一种算法，但由于它要求有较多的硬件支持，故在实际应用中，大多采用 LRU 的近似算法。Clock 算法便是其一。时钟置换算法可以认为是一种最近未使用算法，即逐出的页面都是最近没有使用的那个。我们给每一个页面设置一个标记位u，u=1表示最近有使用u=0则表示该页面最近没有被使用，应该被逐出。
+
+![时钟置换算法（clock）](../pic/时钟置换算法.dio.png)
+
+
+5. 改进型 Clock 置换算法
+   
+在之前的CLOCK算法上面除了使用位(used bit)，还增加了一个修改位(modified bit)，有些地方也叫做dirty bit。现在每一页有两个状态，分别是(使用位，修改位)，  
+
+![改进型 Clock 置换算法](../pic/改进型（clock）置换算法.dio.png)
+
+6. 最少使用置换算法（LFU）
 
 
