--- a/src/排序.md
+++ b/src/排序.md
@@ -139,7 +139,7 @@ void shellSort(vector<int> &nums)
 //@param[in] last 终止位置
 void heapify(vector<int> &arr, int first, int last)
 {
-    int temp = arr[first]; //挂起首段元素
+    int temp = arr[first]; //挂起顶端元素
     for (int curr = 2 * first + 1; curr <= last; curr = 2 * curr + 1) //从左子结点开始，
     {   //找到最小子节点。如果左子结点小于右子结点，指向右子结点
         if (curr + 1 <= last && arr[curr] < arr[curr + 1]) curr++; 
@@ -166,7 +166,7 @@ void heapTree(vector<int> &arr)
 //@param[io] arr 待排序 -> 排序完毕
 void heapSort(vector<int> &arr) 
 {   // 初始化堆。将数组arr构造成堆结构。
-    heapTree(arr); cout << arr << endl;
+    heapTree(arr);
     for (int last = arr.size() - 1; last > 0; last--) {
         swap(arr[0], arr[last]); //交换前后端元素
         heapify(arr, 0, last - 1); //再调整区间内的堆结构
